<resources>
    <string name="app_name">Gastos de viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">Km por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="resultadoTotal">R$ 0</string>
    <string name="calcular_button">calcular</string>
    <string name="notificacao_insira_valores">Insira um valor diferente de 0</string>
    <string name="notificacao_informe_valor_valido">Informe um valor válido</string>
    <string name="descricao_login">Quer viajar mas não sabe quanto vai custar?
Planeje os valores de transporte, alimentação, hospedagem e lazer para descobrir.</string>
    <string name="total">Total</string>
    <string name="alimentaco">Alimentação</string>
    <string name="combustivel">Combustível</string>
    <string name="relatorio">Relatorio</string>
    <string name="hospedagem">Hospedagem</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="hospedagel">Hospedagel</string>
    <string name="combustivel_">Combustivel</string>
    <string name="alimenta_o">Alimentação</string>
    <string name="relatorio_de_viajem">Relatorio de Viajem</string>
    <string name="calcular_hospedagem">Calcular Hospedagem</string>
    <string name="local">Local</string>
    <string name="valor_da_di_ria">Valor da Diária</string>
    <string name="quantidade_de_diarias">Quantidade de diarias</string>
    <string name="data_entrada">Data entrada</string>
    <string name="calcular__">Calcular</string>
    <string name="finalizarD">finalizar</string>
    <string name="finalizarS">finalizar</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="emailR">Email</string>
    <string name="telefone">Telefone</string>
    <string name="senhaE">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="calcular_combustivel">Calcular Combustivel</string>
    <string name="finalizar">finalizar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senhaD">Senha</string>
    <string name="ainda_n_o_cadastrado">Ainda não é cadastrado?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="calcular_alimenta_o">Calcular Alimentação</string>
    <string name="valor_di_rio">Valor Diário</string>
    <string name="quantos_dias">Quantos dias</string>
    <string name="calcular">Calcular</string>
    <string name="finalizar_alimentacao">Finalizar</string>
</resources>