<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccenters"
    android:orientation="vertical"
    tools:context=".CalculoGasolinaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/calcular_combustivel"
        android:textColor="@color/tamires"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/tamires" />


    <ImageView
        android:layout_width="122dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_calculate_24" />

    <EditText
        android:id="@+id/distanciaTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/distancia"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_de_quilometros"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/precoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/preco_por_litro"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/autonomiaTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/km_por_litro"
        android:textColor="@color/white" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/gasto_total"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <!--  TextView que mostra o resultado do calculo  -->
    <!--  FIM  -->


    <TextView
        android:id="@+id/totalResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/resultadoTotal"
        android:textColor="@color/tamires"
        android:textSize="40sp" />


    <!--  Botão calcular  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripper"
        android:text="@string/calcular_button"
        android:textAllCaps="true"
        android:textColor="@color/tamires"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>
    <!--  FIM  -->

    <!--  Botão validar email, senha e muda activity  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/entrarCombustivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripper"
        android:text="@string/finalizar"
        android:textColor="@color/tamires"
        android:textSize="20sp" />
    <!--  FIM  -->


</LinearLayout>