<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccenters"
    android:orientation="vertical"

    tools:context=".HospedagemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/calcular_hospedagem"
        android:textColor="@color/tamires"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/tamires" />

    <ImageView
        android:layout_width="122dp"
        android:layout_height="101dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_calculate_24" />

    <!--    EditText "Local"  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
=======
        android:hint="@string/local"
        android:textColorHint="@color/tamires"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="Local"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/tamires">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccenters"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--    FIM   -->

    <!--    "EditText "DATA"  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
<<<<<<< HEAD
        android:hint="Data entrada"
=======
        android:hint="@string/valor_da_di_ria"
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/tamires">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccenters"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--    FIM   -->

    <!--    EditText "Valor diaria"  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
<<<<<<< HEAD
        android:hint="Valor da Diária"
=======
        android:hint="@string/quantidade_de_diarias"
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/tamires">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDiaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccenters"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--    FIM   -->


    <!--    EditText "Quatidade de Diarias"  -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
=======
        android:hint="@string/data_entrada"
        android:textColorHint="@color/tamires"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Quantidade de diarias"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/tamires">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editQDiaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccenters"
<<<<<<< HEAD
            android:inputType="numberDecimal" />
=======
            android:inputType="date|textCapSentences|textAutoCorrect" />
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
    </com.google.android.material.textfield.TextInputLayout>
    <!--    FIM   -->

    <!--    TextView  -->
    <TextView
        android:id="@+id/totalResultadoHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/resultadoTotal"
        android:textColor="@color/tamires"
        android:textSize="40sp" />

    <!--    FIM   -->

    <!--  Botão Calcular  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcularHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripper"
<<<<<<< HEAD
        android:text="Calcular"
=======
        android:textSize="20sp"
        android:text="@string/calcular"
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
        android:textColor="@color/tamires"
        android:textSize="20sp" />
    <!--  FIM  -->

    <!--  Botão validar email, senha e muda activity  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finalizarHospedagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ripper"
<<<<<<< HEAD
        android:text="finalizar"
=======
        android:textSize="20sp"
        android:text="@string/finalizar"
>>>>>>> 7427431bba942eb8c58d2261bef91729c8992599
        android:textColor="@color/tamires"
        android:textSize="20sp" />
    <!--  FIM  -->

</LinearLayout>